# MFIA-Ct

./: .gitignore  README.md  pm16_gui.py  pm16_read.py  pyproject.toml
docs/: master_protocol_v2_plan.md  measurement-plan-format.md
examples/: plan_2013-2_p-Si.yaml  plan_2013-3_n-Si.yaml  plan_2013-3_test.yaml  plan_S1_0V_unfiltered.yaml  plan_S2a_pos_filtered.yaml  plan_S2b_neg_filtered.yaml  plan_blocks_A-E.yaml  plan_smoketest.yaml
examples/2013-2_p-Si/publication/: plan_S1_0V_filtered.yaml  plan_S1_0V_unfiltered.yaml  plan_S1v2_F340.yaml  plan_S2a_pos_filtered.yaml  plan_S2a_pos_unfiltered.yaml  plan_S2b_neg_filtered.yaml  plan_S2b_neg_unfiltered.yaml
examples/2013-3_n-Si/archive/: plan_2013-3_n-Si_final.yaml  plan_2013-3_n-Si_resume.yaml  plan_darkpatch.yaml
examples/2013-4_nitride/: plan_2013-4_nitride.yaml
examples/generic/: plan_blocks_A-E.yaml
scripts/: D1v2_driver.sh  D1v3_driver.sh  S1_driver.sh  S1_driver_auto.sh  S2_v3_night.sh  S2a_driver_auto.sh  apply_corrections.py  contact_check.py  deembed_pifilter.py  landing_scout.py  manual_cv.py  master_protocol.sh  qa_check.py  run_ct_pulse.py  run_plan_headless.py  session_qc.py
src/mfia_ct/: __init__.py  __main__.py  acquisition.py  b1500.py  cal_main.py  cf_config.py  cf_experiment.py  cf_main.py  cf_plan.py  cf_storage.py  config.py  experiment.py  fg33250a.py  hardware.py  led_calibration.py  led_source.py  mock_fg.py  mock_hardware.py  pm16.py  storage.py
tests/: test_b1500.py  test_calibration.py  test_cf_mock.py  test_cf_plan.py  test_hardware_config.py  test_mock.py
(+29 files in other folders)
